<resources>
    <string name="app_name">TrainBookingSystem</string>
    <string name="fill_upFields">Fill upp all fields</string>
    <string name="email">Email</string>
    <string name="fullname">FullName</string>
    <string name="passport_no">Passport No</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">Sign Up</string>
    <string name="passwords_dont_match">Passwords don\'t match!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tickets">Tickets</string>
    <string name="orders">Orders</string>
    <string name="menu">Menu</string>
    <string name="login">Sign In</string>
    <string name="register">Register</string>
    <string name="from">From</string>
    <string name="date">Date</string>
    <string name="ticket_details">Ticket details</string>
    <string name="to">To</string>
    <string name="return_date">Return</string>
    <string name="settings">Settings</string>
    <string name="price">Price</string>
    <string name="train_number">Train number</string>
    <string name="seats_amount">Seats amount</string>
    <string name="save">Save</string>
    <string name="no_available_tickets">No Available tickets</string>
    <string name="buy">Buy</string>
    <string name="credit_card">Credit card</string>
    <string name="cash">Cash</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date_mm_yy">Expiration Date (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="submit">Submit</string>
    <string name="price_cheap">Price cheap</string>
    <string name="price_medium">Price medium</string>
    <string name="price_lux">Price lux</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="pick_a_seat">Pick a seat</string>
    <string name="history">History</string>
    <string name="old_password_is_required">Old password is required</string>
    <string name="error">Error</string>
    <string name="language">Language</string>
    <string name="edit">Edit Profile</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="search">Search Ticket</string>
    <string name="refresh">refresh</string>
    <string name="add_ticket">Add ticket</string>
    <string name="user_was_not_found">User was not found</string>
    <string name="login_successful">Login Successful</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="account_not_found">Account not found</string>
    <string name="registered">Registered</string>
    <string name="login_account">Login Account</string>
    <string name="please_login_with_registered_account">Please login with registered account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="if_you_don_t_have_an_account">If you don\'t have an account</string>
    <string name="visit_our_terms_and_conditions_n_and_privacy_policy">Visit our Terms and Conditions\n and Privacy Policy</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_link_was_sent_to_your_email">Reset link was sent to your email</string>
    <string name="pensitanian_train">Pensitanian Train</string>
    <string name="train_no">Train No</string>
    <string name="delete_ticket_dialog">Are you sure you want to delete this ticket?</string>
    <string name="delete_ticket">Delete Ticket</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="username">Username</string>
    <string name="create_your_username">Create your username</string>
    <string name="enter_your_passport_number">Enter your passport number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="create_account">Create Account</string>
    <string name="start_travelling_create_new_account">Start travelling, create new account</string>
    <string name="ticket_list">Ticket List</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="maximum_price">Maximum Price</string>
    <string name="minimum_duration">Minimum Duration</string>
    <string name="maximum_duration">Maximum Duration</string>

</resources>