<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimum_price" />

    <EditText
        android:id="@+id/editTextMinPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_price" />

    <EditText
        android:id="@+id/editTextMaxPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimum_duration" />

    <EditText
        android:id="@+id/editTextMinDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_duration" />

    <EditText
        android:id="@+id/editTextMaxDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:importantForAutofill="no" />

</LinearLayout>
